@@ -829,6 +829,34 @@ condition|)
 return|return
 literal|null
 return|;
+if|if
+condition|(
+operator|!
+name|field
+operator|.
+name|indexed
+argument_list|()
+operator|&&
+operator|!
+name|field
+operator|.
+name|stored
+argument_list|()
+condition|)
+block|{
+name|log
+operator|.
+name|finest
+argument_list|(
+literal|"Ignoring unindexed/unstored field: "
+operator|+
+name|field
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
 name|Field
 name|f
 init|=
